--- a/Assets/Features/TimeSystem/TimeSystem.asmdef
+++ b/Assets/Features/TimeSystem/TimeSystem.asmdef
@@ -2,7 +2,8 @@
     "name": "TimeSystem",
     "rootNamespace": "",
     "references": [
-        "GUID:3a8eaf91822d452c85b0843d788bf70b"
+        "GUID:3a8eaf91822d452c85b0843d788bf70b",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
